--- a/dicee.html
+++ b/dicee.html
@@ -8,10 +8,9 @@
 
   </head>
   <body>
-
+    <h1 id="clickMe" role="button">Click Me</h1>
+    <p class="result"></p>
     <div class="container">
-      <h1>Refresh Me</h1>
-
       <div class="dice">
         <p>Player 1</p>
         <img class="img1" src="">
@@ -24,7 +23,7 @@
 
     </div>
   </body>
-
+  <script src="index.js"></script>
   <footer>
     www 🎲 App Brewery 🎲 com
   </footer>
